# src/swagger/contractDocument.swagger.yaml
@@ -116,3 +116,79 @@ draft:
         description: 잘못된 요청입니다.
       "401":
         description: 로그인이 필요합니다.
+
+upload:
+  post:
+    summary: 계약서 파일 업로드
+    tags:
+      - ContractDocuments
+    security:
+      - bearerAuth: []
+    requestBody:
+      required: true
+      content:
+        multipart/form-data:
+          schema:
+            type: object
+            properties:
+              contractDocument:
+                type: string
+                format: binary
+                description: 업로드용 계약서 파일
+    responses:
+      "200":
+        description: 업로드성공
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                contractDocumentId:
+                  type: integer
+                  example: 1
+      "401":
+        description: 로그인이 필요합니다.
+        content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+                example: 로그인이 필요합니다
+
+contractDocumentId/download:
+  get:
+    summary: 계약서 다운로드
+    tags:
+      - ContractDocuments
+    security:
+      - bearerAuth: []
+    parameters:
+      - name: contractDocumentId
+        in: path
+        required: true
+        description: 계약서 ID
+        schema:
+          type: integer
+    responses:
+      "200":
+        description: 계약서 다운로드 성공
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: 계약서 다운로드 성공
+      "401":
+        description: 로그인이 필요합니다.
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: 로그인이 필요합니다
